--- a/style.css
+++ b/style.css
@@ -3,3 +3,46 @@
     padding: 0;
     margin: 0;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.gameboard{
+    position: relative;
+    background-color: rgb(255, 255, 255);
+    width: 30%;
+    padding-top: 30%;
+    border-radius: 6px;
+}
+.cells{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 1rem;
+    /* border: 1px dotted green; */
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem;
+    border-radius: 6px;
+}
+.cell{
+    position: relative;
+    background-color: rgb(162, 206, 221);
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 5rem;
+}
+.cell:hover{
+    cursor: pointer;
+    background-color: rgb(142, 191, 208);
+}
+
